--- a/lab2/index.html
+++ b/lab2/index.html
@@ -127,6 +127,7 @@ h1 em{
 <div>
   <img src="kao.jfif" alt="習近平" style="width:150px">
 </div>
-
+<a href = LAB2Web1.html> web1 </a>
+<a href = LAB2Web2.html> web1 </a>
 </body>
 </html>
