--- a/lab2/index.html
+++ b/lab2/index.html
@@ -128,6 +128,6 @@ h1 em{
   <img src="kao.jfif" alt="習近平" style="width:150px">
 </div>
 <a href = LAB2Web1.html> web1 </a>
-<a href = LAB2Web2.html> web1 </a>
+<a href = lab2Web2.html> web2 </a>
 </body>
 </html>
