--- a/lab2/LAB2Web1.html
+++ b/lab2/LAB2Web1.html
@@ -5,7 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style type= "text/css">
 #section{
-	background-color:#396d7c;
+	background-c
+	olor:#396d7c;
 	color: white;
 	padding: 10 px;
 	font-size: 55 pt;
